# bayes

./: .gitignore  README.md  pyproject.toml
slide/: ベイズ推測概論（１）.key
stan_with_julia/: Julia_Stan.md  stan_with_jl_01.ipynb
stan_with_julia/Chapter04/: lm.jl  plot_scatter_fig4-2.jl  run-model4-5.jl
stan_with_julia/Chapter04/model/: model4-5.stan
stan_with_julia/Chapter04/output/: mcmc_summary.csv
stan_with_julia/something/: stan_with_jl_01.ipynb
stan_with_python/: criterion.py  model_code.pkl  plot12-3-right.py  plot12-4-left.py  plot12-4-right.py  stan_with_py02.ipynb  stan_with_py03.ipynb  stan_with_py04.ipynb  stan_with_py05.ipynb  stan_with_py06.ipynb  stan_with_py07.ipynb  stan_with_py08.ipynb  util.py  utils.py
stan_with_python/.ipynb_checkpoints/: criterion-checkpoint.py
stan_with_python/.virtual_documents/notebooks/: stan_with_py01.ipynb.py
stan_with_python/model/: model5-3.pkl  model5-3.stan
stan_with_python/model/.ipynb_checkpoints/: model5-3-checkpoint.stan
stan_with_python/model/model_pkl/: model12-3.pkl  model12-6.pkl  model5-5-optimized.pkl  model5-6.pkl  model7-1.pkl
stan_with_python/model/stanmodel/: model12-11.stan  model12-12.stan  model12-2.stan  model12-3.stan  model12-6.stan  model12-7.stan  model4-2.stan  model5-5.stan  (+6 more)
stan_with_python/notebooks/: stan_with_py01.jl  stan_with_py01.py  stan_with_py06.ipynb  stan_with_py07.ipynb  stan_with_py08 (1).ipynb  stan_with_py08.ipynb
watanabe_bayes/: plot1_4.jl  plot1_4.py
watanabe_bayes/chap01/: watanabe01.ipynb
watanabe_bayes/chap04/: experiment.py  mcmc.py  redueced_rank_reg.py
(+3 files in other folders)
