[tool.poetry]
name = "workflow"
version = "0.1.10"
description = ""
authors = ["daikichiba9511"]

[tool.poetry.dependencies]
python = "^3.7"
sklearn = "^0.0"
pandas = "*"
numpy = "*"
matplotlib = "*"
seaborn = "*"
japanize-matplotlib = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
scipy = "^1.5.1"
jupyterlab = "^2.1.5"
jupyter = "^1.0.0"
jupytext = "^1.5.2"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter-nbextensions-configurator = "^0.4.1"
jupyterlab_code_formatter = "^1.3.5"
autopep8 = "^1.5.4"
black = "^19.10b0"
jupyter-lsp = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
